<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shiftViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainStats" >

    <LinearLayout
        android:id="@+id/shiftViewSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pressed_blue"
        android:paddingBottom="4dp" >

        <Button
            android:id="@+id/shiftTipsTab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/tab_current_button"
            android:padding="0dp"
            android:text="@string/static_tips" />

        <Button
            android:id="@+id/shiftStatsTab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:padding="0dp"
            android:text="@string/static_stats" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ShiftViewTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/tipsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tip_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/dateView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/addTipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_button_description"
            android:src="@android:drawable/ic_menu_add" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mainViewDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/divider_description"
        android:scaleType="fitXY"
        android:src="@drawable/divider_bar" />

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="226dp" >
    </ListView>

    <LinearLayout
        android:id="@+id/shiftTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/shiftTotalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errorMissingText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <Button
        android:id="@+id/closeShiftButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/close_shift" />

</LinearLayout>