<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/OptionsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pressed_blue"
        android:paddingBottom="4dp" >

        <Button
            android:id="@+id/optionsShiftTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:text="@string/static_shifts" />

        <Button
            android:id="@+id/optionsStatsTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:text="@string/static_stats" />
        
        <Button
            android:id="@+id/optionsCurrentTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_current_button"
            android:text="@string/static_options" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/optionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/static_options"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ImageView
        android:id="@+id/optionsViewDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/divider_description"
        android:scaleType="fitXY"
        android:src="@drawable/divider_bar" />

    <Button
        android:id="@+id/deleteAllShiftsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/delete_shifts" />

</LinearLayout>