<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainView" >

    <LinearLayout
        android:id="@+id/viewSwitch"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pressed_blue"
        android:orientation="horizontal"
        android:paddingBottom="4dp" >

        <Button
            android:id="@+id/mainShiftsTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_current_button"
            android:padding="0dp"
            android:text="@string/static_shifts" />

        <Button
            android:id="@+id/mainStatsTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:padding="0dp"
            android:text="@string/static_stats" />

        <Button
            android:id="@+id/mainOptionsTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:padding="0dp"
            android:text="@string/static_options" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainShiftsTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/mainShiftsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/static_shifts"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/addShiftButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_button_description"
            android:src="@android:drawable/ic_menu_add" />

    </LinearLayout>

    <ImageView
        android:id="@+id/mainViewDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/divider_description"
        android:scaleType="fitXY"
        android:src="@drawable/divider_bar" />

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </ListView>

</LinearLayout>