<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainView" >

    <LinearLayout
        android:id="@+id/viewSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pressed_blue"
        android:orientation="horizontal"
        android:paddingBottom="4dp" >

        <Button
            android:id="@+id/shiftsStatsShiftTab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/tab_buttons"
            android:text="@string/static_shifts" />

        <Button
            android:id="@+id/shiftStatsCurrentTab"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/tab_current_button"
            android:text="@string/static_stats" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainStatsTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/mainShiftsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/static_stats"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <ImageView
        android:id="@+id/mainViewDivider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/divider_description"
        android:scaleType="fitXY"
        android:src="@drawable/divider_bar" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/shiftStatsHighestLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/highest"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsHighestDate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsHighestAmount"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/shiftStatsLowestLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lowest"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsLowestDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsLowestAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" >

            <TextView
                android:id="@+id/shiftStatsAverageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/average"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsAverageDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shiftStatsAverageAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

</LinearLayout>